@@ -287,9 +287,10 @@ API_EXPORT(char *) pregsub(pool *p, const char *input, const char *source,
 	}
 	else if (no < nmatch && pmatch[no].rm_so < pmatch[no].rm_eo) {
 	    len = pmatch[no].rm_eo - pmatch[no].rm_so;
-	    strncpy(dst, source + pmatch[no].rm_so, len);
+	    ap_cpystrn(dst, source + pmatch[no].rm_so, len);
 	    dst += len;
-	    if (*(dst - 1) == '\0')	/* strncpy hit NULL. */
+	    /* is this still valid? jj 12/26/97 */
+	    if (*(dst - 1) == '\0')	/* ap_cpystrn hit NULL. */
 		return NULL;
 	}
 
@@ -440,7 +441,7 @@ API_EXPORT(char *) make_dirstr(pool *p, const char *s, int n)
 	if (s[x] == '/')
 	    if ((++f) == n) {
 		res = palloc(p, x + 2);
-		strncpy(res, s, x);
+		ap_cpystrn(res, s, x);
 		res[x] = '/';
 		res[x + 1] = '\0';
 		return res;
@@ -499,8 +500,7 @@ API_EXPORT(char *) getword(pool *atrans, const char **line, char stop)
     }
 
     res = palloc(atrans, pos + 1);
-    strncpy(res, *line, pos);
-    res[pos] = '\0';
+    ap_cpystrn(res, *line, pos);
 
     while ((*line)[pos] == stop)
 	++pos;
@@ -534,8 +534,7 @@ API_EXPORT(char *) getword_white(pool *atrans, const char **line)
     }
 
     res = palloc(atrans, pos + 1);
-    strncpy(res, *line, pos);
-    res[pos] = '\0';
+    ap_cpystrn(res, *line, pos);
 
     while (isspace((*line)[pos]))
 	++pos;
@@ -562,8 +561,7 @@ API_EXPORT(char *) getword_nulls(pool *atrans, const char **line, char stop)
     }
 
     res = palloc(atrans, pos + 1);
-    strncpy(res, *line, pos);
-    res[pos] = '\0';
+    ap_cpystrn(res, *line, pos);
 
     ++pos;
 
@@ -846,8 +844,7 @@ API_EXPORT(char *) get_token(pool *p, char **accept_line, int accept_white)
 
     tok_len = ptr - tok_start;
     token = palloc(p, tok_len + 1);
-    strncpy(token, tok_start, tok_len);
-    token[tok_len] = '\0';
+    ap_cpystrn(token, tok_start, tok_len);
 
     /* Advance accept_line pointer to the next non-white byte */
 
